# bisp

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  apps.py  factories.py  models.py  serializers.py  services.py  signals.py  urls.py  validators.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_profile.py
backend/apps/accounts/tests/: conftest.py  test_avatar_upload.py  test_jwt_config.py  test_login.py  test_logout.py  test_permissions.py  test_profile_edit.py  test_profile_signal.py  test_public_profile.py  test_refresh.py  test_register.py  test_user_anchor.py
backend/apps/bookings/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/bookings/migrations/: 0001_initial.py
backend/apps/bookings/tests/: conftest.py  test_overlap.py  test_pricing.py  test_transition.py
backend/apps/catalog/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/catalog/migrations/: 0001_initial.py  (+1 more)
backend/apps/common/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/payments/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/search/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/ijara/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: entrypoint.sh  init_extensions.sql
(+57 files in other folders)
